zoos by state view now has the 'jump to' buttons in fixed position so they're accessible while scrolling

--- a/Capstone/wwwroot/css/site.css
+++ b/Capstone/wwwroot/css/site.css
@@ -78,9 +78,10 @@ h4, h5, h6 {
 
 .state-letters {
     position: fixed;
-    bottom: 400;
+    bottom: 580px;
     right: 0;
     font-size: .8em;
+    z-index: 1;
 }
 
 .title {
